--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 .container{
-    padding:20px;
-    width:500px;
+    padding-top: 50px;
+    width:560px;
     margin:0 auto;
 }
 .header{
     width: 500px;
-    height:100px;
+    height:95px;
     position: relative;
     background-color:teal;
 }
@@ -32,10 +32,18 @@
     margin:0;
 }
 #input{
-    width: 496px;
+    width: 488px;
     height: 40px;
+    border: 1px solid;
+    border-color: cadetblue;
+    padding-left: 10px;
 }
 p{
     color: white;
     font-family: sans-serif;
+    padding-left: 30px;
+    font-size: 24px;
+}
+i{
+    color: blueviolet;
 }
